[package]
name = "bellande_limit"
version = "0.1.1"
edition = "2021"
authors = ["Bellande Robotics Sensors Research Innovation Center"]
description = "Bellande Adaptive Step Size dynamically adjusts movement increments for optimal robotic path planning and navigation"
license = "GPL-3.0-or-later"
repository = "https://github.com/Robotics-Sensors/bellande_limit"
readme = "README.md"
keywords = ["robotics", "algorithms", "research"]
categories = ["science", "algorithms"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
structopt = "0.3"

[lib]
name = "bellande_limit"
path = "src/bellande_limit.rs"
